--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <input type="text">
     <button class="Start">Start</button>
     <button class="Submit">Submit</button>
+
+    <script src="script.js"></script>
 </body>
 </html>
